# color-tracker

./: ColorTrack.idl  ColorTracker-genom3-uninstalled.pc.in  ColorTracker-genom3.pc.in  ColorTracker.gen  Environment.idl  Makefile.am  README.adoc  configure.ac
codels/: ColorTracker_codels.cc  ColorTracker_track_codels.cc  Makefile.am  tracking.hpp
